# tei-proxy

./: AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  test_openwebui_rerank.sh  test_req.json
.github/workflows/: ci.yml  docker.yaml
docs/: EMBEDDING.md  README.md  RERANK.md
src/: handlers.rs  main.rs  routes.rs  types.rs
tests/: live_tei.rs  shutdown.rs  test_openwebui_rerank.sh
