[package]
name = "rerank-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
warp = "0.3"
anyhow = "1.0"
env_logger = "0.11"
serde_json = "1.0"

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
codegen-units = 1   # Better optimization
lto = true          # Link-time optimization
opt-level = "z"     # Optimize for size
panic = "abort"     # Smaller binary
strip = true        # Remove debug symbols
