[package]
name = "tei-proxy"
version = "0.2.0"
edition = "2024"
description = "Lightweight proxy bridging OpenWebUI to HuggingFace TEI rerank/embedding services"

[lib]
name = "tei_proxy"
path = "src/lib.rs"

[[bin]]
name = "tei-proxy"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
warp = "0.3"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
